<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/header_content"
        android:src="@drawable/header2" />

    <Button
        android:id="@+id/bt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchOnClick"
        android:text="@string/list_button"
        android:textColor="#FFF"
        android:background="#404040" />

    <TextView
        android:id="@+id/tv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bus_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/spinner_bus_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tv_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/et_location"
            android:layout_width="0dip"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/bt_get_location"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:onClick="getLocationOnClick"
            android:text="@string/get_location_button"
            android:textColor="#FFF"
        	android:background="#404040" />
        
    </LinearLayout>

    <Button
        android:id="@+id/bt_send"
        android:onClick="sendOnClik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/checkin_button"
        android:text="@string/checkin_button"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"
        android:background="#4E9C00" />

</LinearLayout>